# eg-etl

./: .gitignore  README.md  main.ipynb  pyproject.toml  query.ipynb
conf/: init_schema.py
src/: common_utils.py  constants.py  extract_utils.py  load_utils.py  orchestration.py  psd_utils.py  validation_utils.py
src/transform/: postcode.py  users.py
src_data/: users.json  users1.json
